--- a/package.json
+++ b/package.json
@@ -1,9 +1,30 @@
 {
-  "name": "divine-trinity-oracle",
+  "name": "divine-trinity-messenger",
   "version": "1.0.0",
-  "description": "Serverless Oracle for Divine Trinity",
+  "description": "Divine Trinity AI Portal - Messenger Bot",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "divine-trinity",
+    "messenger",
+    "facebook",
+    "webhook",
+    "ai"
+  ],
+  "author": "Kostas Kyprianos",
+  "license": "MIT",
   "dependencies": {
-    "@google/generative-ai": "^0.1.3",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=20.x"
   }
 }
